force-app/main/default/objects/skilljar__Access_Code_Pool__c/skilljar__Access_Code_Pool__c.object-meta.xml
<CustomObject>
    <label>Access Code Pool</label>
    <nameField>
        <label>Access Code Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Code Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>