force-app/main/default/objects/skilljar__Access_Code_Pool__c/fields/skilljar__Active__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>