force-app/main/default/objects/skilljar__Access_Code_Pool__c/fields/skilljar__Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>