force-app/main/default/objects/skilljar__Access_Code_Pool__c/fields/skilljar__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>skilljar__End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>