force-app/main/default/objects/skilljar__Access_Code_Pool__c/fields/skilljar__Purchase__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase</label>
    <referenceTo>skilljar__Purchase__c</referenceTo>
    <relationshipLabel>Access Code Pools</relationshipLabel>
    <relationshipName>Access_Code_Pools</relationshipName>
    <type>Lookup</type>
</CustomField>